Calling certain text operations in mac hangs firefox
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
People
(Reporter: eeejay, Assigned: eeejay)
References
Details
(Whiteboard: [mac2020_1])
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
The current implementation for getting a string for a range requires us to traverse the text tree in the parent process and make a handful of synchronous calls into content for each node. The larger the subtree, the more calls. This means that if a user selects a very large chunk of text with VoiceOver running, or OSX's speak selection feature - Firefox will hang.
I think we need to back out this API until a more efficient implementation is available.
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
Comment on attachment 9169466 [details]
Bug 1657653 - Hide text marker range attributes that hammer IPC. r=morgan
Beta/Release Uplift Approval Request
- User impact if declined: Serious firefox slow downs
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This has landed in central. It mistakenly got associated with another bug:
https://hg.mozilla.org/mozilla-central/rev/e43038a3c22a8aaf90d266048bf4bc4272111365 - String changes made/needed:
Comment 3•5 years ago
|
||
Comment 4•5 years ago
|
||
Comment on attachment 9169466 [details]
Bug 1657653 - Hide text marker range attributes that hammer IPC. r=morgan
macos a11y fix, approved for 80.0b8
Comment 5•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 6•5 years ago
|
||
I successfully reproduced the issue on Firefox 81.0a1 (2020-08-06) under macOS 11 by selecting all the text from this page and activate the speak selection feature.
The hangs are no longer reproducible on Firefox Nightly 81.0a1 (2020-08-16), but I couldn't use the text selection feature on 80.0b8. It simply won't activate by using the key combinations.
Any idea what could have happened here Eitan?
| Assignee | ||
Comment 7•5 years ago
|
||
(In reply to Catalin Sasca, QA [:csasca] from comment #6)
I successfully reproduced the issue on Firefox 81.0a1 (2020-08-06) under macOS 11 by selecting all the text from this page and activate the speak selection feature.
The hangs are no longer reproducible on Firefox Nightly 81.0a1 (2020-08-16), but I couldn't use the text selection feature on 80.0b8. It simply won't activate by using the key combinations.
Any idea what could have happened here Eitan?
The patch in this bug temporarily deactivated the speak selection feature until we could figure out a performant way to do it. It will remain disabled in 80, but I recently landed a patch that makes it fast again in 81, and re-exposed the API in bug 1659215. So now this is fixed and should not be reproducible in nightly.
Comment 8•5 years ago
|
||
Marking nightly as fixed, as it was verified on 81.0a1 (2020-08-16), see Comment 6.
Comment 9•5 years ago
|
||
Verified as well with Firefox 80.0 on macOS 10.15.
Description
•