Bug 1657653 - Hide text marker range attributes that hammer IPC. r=morgan, a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D86735